# BLE-Code

./: .ble-environment.aln  .gitignore  AiContributionPolicy.aln  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  repo-governance.aln
.cargo/: config.toml
.github/workflows/: android-ci.yml  catalog-ci.yml  ci.yml  perplexity-ci.yml  tooling-governance.yml  tools-ci.yml  verify-perplexity-assets.yml
configs/: perplexity-ble-guard-config.json
cpp/esp32-ble-neural/src/: main.cpp
crates/aln-core/: Cargo.toml
crates/aln-core/src/: lib.rs
crates/ble-adapter-btleplug/: Cargo.toml
crates/ble-adapter-btleplug/src/: lib.rs  mapping.rs
crates/ble-android-ffi/: Cargo.toml
crates/ble-android-ffi/src/: ffi_safety.rs  lib.rs
crates/ble-core/: Cargo.toml
crates/ble-core/src/: lib.rs
crates/ble-env-ingest/: Cargo.toml
crates/ble-env-ingest/src/: aln_append.rs  lib.rs
crates/ble-governance/: Cargo.toml
crates/ble-governance/src/: aln_loader.rs  lib.rs
crates/ble-guard/: Cargo.toml
crates/ble-guard/src/: lib.rs  link_policy.rs
crates/ble-guard/tests/: perplexity_profile_smoke.rs
crates/ble-host/: Cargo.toml
crates/ble-host/src/: lib.rs
crates/ble-model/: Cargo.toml
crates/ble-model/src/: lib.rs
crates/ble-peripheral/: Cargo.toml
crates/ble-peripheral/src/: lib.rs
crates/ble-security/: Cargo.toml
crates/ble-security/src/: lib.rs
crates/ble-tools-ci-lint-github/: Cargo.toml
crates/ble-tools-ci-lint-github/src/: main.rs
crates/ble-tools-code-patterns/: Cargo.toml
crates/ble-tools-code-patterns/src/: main.rs
crates/ble-tools-core-purity/: Cargo.toml
crates/ble-tools-core-purity/src/: main.rs
crates/ble-tools-workspace-lint/: Cargo.toml
crates/ble-tools-workspace-lint/src/: main.rs
crates/cmdp-examples/src/: fear_corridor_cmdp.rs
crates/corridor_nanoswarm_telemetry/: Cargo.toml
crates/corridor_nanoswarm_telemetry/src/: lib.rs  mac.rs  payload.rs  rf_budget.rs
crates/ghostnet-core/src/: events.rs
crates/ghostnet-core/src/spectral/: ghostlike.rs
crates/tooling-governance/src/: abort_and_flush.rs  tooling_governance_state.rs
crates/tooling-logger/src/: code_event_logger.rs
docs/: REPOSITORY_STRUCTURE.md  ai-agent-prompt-template.md  ai-usage-perplexity-ble-guard-v1.md  catalog-usage-guide.md  repo_inventory.md
docs/android/: NeuroBleGuardClient.kt  NeuroBleGuardNative.kt
docs/diagrams/: ble-governance-flow.md
docs/ghostnet/: ghostlike-band.md
examples/: ble-guard-demo.rs  perplexity-bci-telemetry.example.json  perplexity-ble-session.example.json
ghostnet-core/src/spectral/: ghostlike.rs
java/ble-neural-service/src/main/java/io/bluebird/service/: BleGovernanceService.java
kotlin/ble-neural-client/app/src/main/java/io/bluebird/bleneural/: BleNeuralGovernanceClient.kt
playbooks/: nordic-uart-scan-connect-subscribe.ble-playbook.aln  openbci-cyton-over-nus.ble-playbook.aln
rust/crates/ble-neural-guardian/: Cargo.toml
rust/crates/ble-neural-guardian/src/: lib.rs
schemas/: aln-index.json  bci-stream-profile.openbci-cyton.v1.aln  bci-telemetry.v1.schema.json  ble-profile.schema.v1.aln  ble-session.v1.schema.json  perplexity-ble-guard-v1.profile.aln  spectral.ghostlike.band.v1.aln  tooling-event.v1.aln  tooling-governance-state.v1.aln  workspace-hygiene.v1.aln
scripts/spectrescripts/: ghostlike.lua
tools/: check_code_patterns.sh  check_core_purity.sh  check_lint_inheritance.sh  check_members.sh  check_perplexity_profile.sh  code_patterns.toml  core_purity.toml  fmt-plan.ble-code.txt  generate_environment_sample.sh  initial_setup.sh  link_playbooks.sh  playbook_simulate.sh  run_all_checks.sh  seed_catalog.sh  test_catalog_integrity.sh  update_readme_toc.sh  bash
ui/lib/: ghostlikeClassifier.js
