[workspace]
resolver = "2"

members = [
    "crates/ble-model",
    "crates/ble-governance",
    "crates/ble-guard",
    "crates/ble-env-ingest",
    "crates/ble-adapter-btleplug",
    "crates/ble-android-ffi",
    "crates/ble-tools-workspace-lint",
    "crates/ble-tools-ci-lint-github",
]

[workspace.package]
edition = "2024"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["DataLake contributors <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
description = "Governance-first BLE model, guard, and adapters for AI-safe, neurorights-compliant Bluetooth Low Energy code."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
