[workspace]
resolver = "2"

members = [
    "crates/ble-model",
    "crates/ble-governance",
    "crates/ble-guard",
    "crates/ble-env-ingest",
    "crates/ble-adapter-btleplug",
    "crates/ble-android-ffi",
    "crates/ble-tools-workspace-lint",
    "crates/ble-tools-ci-lint-github",
    "crates/ble-tools-core-purity",

    # Optional: glob pattern for additional crates and BLE tools
    "rust/crates/*",
    "ble-tools-*",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["DataLake contributors <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
description = "Governance-first BLE model, guard, and adapters for AI-safe, neurorights-compliant Bluetooth Low Energy code."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"
unused_extern_crates = "deny"
unused_imports = "deny"
unused_must_use = "deny"
unused_variables = "warn"
rust_2018_idioms = "warn"
unexpected_cfgs = "deny"

[workspace.lints.clippy]
# Core AI-safety and correctness
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

# Foot-guns and complexity traps
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
unnecessary_to_owned = "deny"
borrowed_box = "deny"
inefficient_to_string = "deny"
from_iter_instead_of_collect = "deny"
needless_lifetimes = "deny"
extra_unused_type_parameters = "deny"
type_complexity = "deny"
result_unit_err = "deny"
unit_arg = "deny"
needless_pass_by_value = "deny"
match_like_matches_macro = "deny"
match_bool = "deny"
match_single_binding = "deny"
if_same_then_else = "deny"
bool_comparison = "deny"
into_iter_on_ref = "deny"
map_clone = "deny"
flat_map_identity = "deny"
manual_flatten = "deny"
single_collect = "deny"
needless_collect = "deny"
inefficient_open_options = "deny"
incorrect_partial_ord_impl_on_ord_type = "deny"
cmp_owned = "deny"
naive_bytecount = "deny"

# Broad lint groups enabled but not CI-breaking
all = "warn"
large_enum_variant = "warn"
large_stack_arrays = "warn"
map_err_ignore = "deny"

# Pedantic and nursery warnings at lower priority
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
