[package]
name = "ble-adapter-btleplug"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Thin btleplug adapter that maps events to BLE-Code intents and link parameters."

[features]
default = []
btleplug = ["dep:btleplug"]

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }

ble-model = { path = "../ble-model" }

# Only pulled in when feature = "btleplug"
btleplug = { version = "0.11", optional = true }

[lints]
workspace = true
