[package]
name = "ble-android-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "FFI JSON bridge for BleGuard for Android/Kotlin clients."

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.19"

ble-model = { path = "../ble-model" }
ble-guard = { path = "../ble-guard" }
ble-governance = { path = "../ble-governance" }
