[package]
name = "ble-env-ingest"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Environment ingestion for BLE scans (Termux/CLI) into BLE-Code models."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

ble-model = { path = "../ble-model" }
# aln-core = { version = "0.1.0", path = "../../crates/aln-core" }

[lints]
workspace = true
