[package]
name = "ble-governance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "ALN-backed BLE policy objects and invariants for neurorights and RoH."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# ALN loader – this should be your existing ALN → serde bridge crate name.
aln-core = { version = "0.1.0", path = "../../crates/aln-core" }

[lints]
workspace = true
