[package]
name = "ble-governance"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "ALN-backed BLE policy objects and invariants for neurorights and RoH."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Add this line if aln-core exists in your workspace:
# aln-core = { path = "../aln-core" }

[lints]
workspace = true
