[package]
name = "ble-model"
version = "0.1.0"
edition = "2024"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Library-agnostic BLE grammar for intents, link parameters, and observations."

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
