[package]
name = "ble-peripheral"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Peripheral role implementation for BLE-Code."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

ble-core = { path = "../ble-core" }
ble-security = { path = "../ble-security" }

[lints]
workspace = true
