[package]
name = "ble-tools-ci-lint-github"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Governance linter for GitHub workflows in BLE-Code."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
glob = "0.3"
