[package]
name = "ble-tools-code-patterns"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["DataLake contributors <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
description = "Workspace-wide code pattern scanner for BLE-Code, driven by tools/code_patterns.toml."
repository = "https://github.com/mk-bluebird/BLE-Code"
categories = ["development-tools", "lints"]
keywords = ["ble", "lint", "patterns", "governance"]
# Binary tool, not meant for publishing to crates.io by default.
publish = false

[dependencies]
# Use workspace-pinned core crates for consistency
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }

# Tool-local dependencies (not in workspace.dependencies)
serde_with = "3"
walkdir = "2"
toml = "0.8"
thiserror = "2"
