# File: crates/corridor_nanoswarm_telemetry/Cargo.toml

[package]
name = "corridor_nanoswarm_telemetry"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Corridor-aware nanoswarm telemetry and RF-safe MAC logic for BLE / LoRaWAN under BeeRF corridors."
license = "MIT OR Apache-2.0"
authors = ["bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7"]
categories = [
    "embedded",
    "network-programming",
    "science",
]
keywords = [
    "corridor",
    "nanoswarm",
    "telemetry",
    "ble",
    "lorawan",
]

[lib]
name = "corridor_nanoswarm_telemetry"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Fixed, non-guessed versions required by the Space:
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.120", default-features = false }

# `heapless` is a widely-used, well-documented no_std-compatible crate for fixed-capacity
# collections; this matches the embedded, battery-free nanoswarm constraints.
heapless = { version = "0.8.0", default-features = false }

# This crate is designed to integrate with the existing corridor_core crate you outlined
# in the corridor grammar; when you materialize that crate in the mono-repo, you can
# uncomment and point this dependency at the local path.
# corridor_core = { path = "../corridor_core" }

[features]
default = ["std"]

# `std` feature enables integration in host tools and tests.
std = []

[dev-dependencies]
# Add test-only tooling as needed; kept empty to satisfy the no-guessing constraint.
